src/main/java/com/errors/test_errors_list/model/User.java
package com.errors.test_errors_list.model;

import lombok.AllArgsConstructor;
import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
@AllArgsConstructor
public class User {

    private String name;
    private String email;

}
